<resources>
    <string name="app_name">Repeats</string>
    <string name="Set">Set</string>
    <string name="Question">Question</string>
    <string name="Answer">Answer</string>
    <string name="Tag_id_0" translatable="false">0</string>
    <string name="Tag_id_1" translatable="false">1</string>
    <string name="Tag_id_2" translatable="false">2</string>
    <string name="ReplyText">Answer the question</string>
    <string name="Reply">Answer</string>
    <string name="CorrectAnswer2">Congrats! This is the correct answer!</string>
    <string name="IncorrectAnswer1">This is not the correct answer</string>
    <string name="IncorrectAnswer2">Correct answer is:</string>
    <string name="Next">Next question</string>
    <string name="Cancel">Cancel</string>
    <string name="Check">Check</string>
    <string name="Save">Save</string>
    <string name="QuestionFreq">Set the frequency of sending notifications (in minutes)</string>
    <string name="ChannelTitle">Notifications with question</string>
    <string name="ChannelDescription">App sends notification with question</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="DeleteSet">Delete set</string>
    <string name="notifications">Notifications</string>
    <string name="EnableTitle">Notifications from specific sets</string>
    <string name="EnableSummary">Select specific set from which will be sending notifications</string>
    <string name="FreqAskPref">Change the frequency of sending notifications</string>
    <string name="FreqText">Notifications are delivered every</string>
    <string name="minutes">minutes</string>
    <string name="changeTheme">Change theme</string>
    <string name="Theme">Theme</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
    <string name="search_hint">Search</string>
    <string name="channelname2">Notifications with answer</string>
    <string name="channeldesc2">This channel is responsible for delivery notification with answer</string>
    <string name="channelname3">Next Question Notifications</string>
    <string name="channeldesc3">This channel is responsible for Next Question feature</string>
    <string name="SendFeedback">Send feedback</string>
    <string name="FeedbackSubject">Feedback about Repeats for Android version</string>
    <string name="EmptyHere">\nIt\'s a bit empty here…\nCreate new set by clicking on +</string>
    <string name="WantDelete">Are you sure you want to delete the entire set?</string>
    <string name="Delete">Delete</string>
    <string name="CorrectAnswer1">Congrats!</string>
    <string name="About">About</string>
    <string name="SetName">Name of the set</string>
    <string name="IgnoreChars">Ignore special characters</string>
    <string name="AddSet">Add set</string>
    <string name="share">Share</string>
    <string name="notifiFromSets">Notifications from sets</string>
    <string name="loading">Loading...</string>
    <string name="rateApp">Rate app</string>
    <string name="savingInProgress">Saving set in progress</string>
    <string name="explorerNotFound">File explorer was not found. Repeats can\'t read set from file.</string>
    <string name="storeNotFound">Google Play Store was not found</string>
    <string name="enterNumber">Enter number</string>
    <string name="imageError">Can not access the image. Try loading the image again, this time app will try to do it with a different way</string>
    <string name="batteryO">Turn off battery optimization</string>
    <string name="batteryOsummary">Turning off battery optimization for this app can help deliver notifications on time</string>
    <string name="batteryAskTitle">We need your permission</string>
    <string name="batteryAskMessage">We need to turn off battery optimization for this app. This will ensure that notifications are delivered on time. In the next window click \"Yes\" or \"Allow\".</string>
    <string name="CancelOffBattery">You can always disable battery optimization in the Repeats or device settings</string>
    <string name="Continue">Continue</string>
    <string name="SystemTheme">System default</string>
    <string name="backup">Backup</string>
    <string name="createBackup">Create backup</string>
    <string name="restoreBackup">Restore backup</string>
    <string name="localBackup">On your device</string>
    <string name="cloudBackup">In the cloud or other apps</string>
    <string name="where_Backup">Where do you want to save the backup?</string>
    <string name="send">Send</string>
    <string name="backup_restored">Backup restored</string>
    <string name="backup_created">Backup created</string>
    <string name="FLendText">Fast learning has ended</string>
    <string name="OnceAgain">Once again</string>
    <string name="FastLearning">Fast learning</string>
    <string name="hours">Hours:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="addHours">Add hours</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="turned_off">Turned off</string>
    <string name="const_freq">Constant frequency</string>
    <string name="advanced_notifi">Advanced delivery settings</string>
    <string name="notifi_mode">Notifications mode</string>
    <string name="silenceHours">Silence Hours</string>
    <string name="silenceHoursSummary">When enabled, notifications will not be delivered at certain times</string>
    <string name="changeSilenceHours">Change silence hours</string>
    <string name="batteryOptimization">Battery optimization</string>
    <string name="changeDelivery">Change notification delivery settings</string>
    <string name="frequency">Frequency:</string>
    <string name="days">Days:</string>
    <string name="sets">Sets</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="deliverySettings">Delivery settings</string>
    <string name="editRule">Edit rule</string>
    <string name="addRule">Add rule</string>
    <string name="noSetsInfoSettings">Add at least one set to enable notifications</string>
    <string name="selectDays">Select days:</string>
    <string name="cantLoadSet">Can\'t load any set</string>
    <string name="checkSetSettings">Check your settings</string>
    <string name="specialThanksDawid">Special thanks to Dawid Poradziński for being a very good tester</string>
    <string name="welcome">Welcome to</string>
    <string name="startQuestionRC">What do you want to learn today?</string>
    <string name="repeatsCommunity">Repeats Community</string>
    <string name="share_to_community">Share to Repeats Community</string>
    <string name="sharing">Sharing</string>
    <string name="share_to_file">Save to local file and share</string>
    <string name="string_public">Share publicly and generate a shareable link</string>
    <string name="string_private">Share with specific people via link</string>
    <string name="public_desc">Share to everyone in the Community. Everyone can find and download your set.</string>
    <string name="setPreview">Preview</string>
    <string name="successDownload">Download completed</string>
    <string name="successShare">Shared successfully</string>
    <string name="somethingWentWrong">Something Went Wrong</string>
    <string name="mySets">My sets</string>
    <string name="yourSets">Your sets in Repeats Community</string>
    <string name="next">Next</string>
    <string name="noMySets">You don\'t have any set in Repeats Community</string>
    <string name="termsInfo">By using the Repeats app you agree to <a href="https://rootekstudio.wordpress.com/warunki-uzytkowania/">Terms of use</a> and <a href="https://rootekstudio.wordpress.com/polityka-prywatnosci/">Privacy policy</a></string>
    <string name="upTo5Words">You can only search up to 5 words</string>
    <string name="nothingFound">Nothing found</string>
    <string name="imageSharingInfo">Image sharing to the Repeats Community is currently unsupported</string>
    <string name="tagsInfo">Add tags to better find the set in the Community (separated by semicolons):</string>
    <string name="termsOfUse">Terms of use</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="searchResultHere">The search results will appear here</string>
    <string name="question_lang">Languages of questions</string>
    <string name="answer_lang">Language of answers</string>
    <string name="speed_tts">Reading speed</string>
    <string name="readAloud">Reading aloud</string>
    <string name="setSettings">Set settings</string>
    <string name="languageSettings">Language settings</string>
    <string name="cantShareSet">You can\'t share this set. Name the set differently.</string>
    <string name="playing_set">Playing set:</string>
    <string name="click_here_read_notifi">Click here to go to the player</string>
    <string name="see_whats_now">See what\'s new</string>
    <string name="welcome_to_update">Welcome to Repeats 2.7</string>
    <string name="app_updated_info">App has been updated to the latest version</string>
    <string name="channelname4">Read Aloud notification</string>
    <string name="channeldesc4">This notification will show up when you are listening to the set</string>
    <string name="checking_answers">Checking answers</string>
    <string name="set_languages">Set languages</string>
    <string name="ignore_chars_info">When this feature is enabled, case sensitive characters, spaces, and diacritics will be ignored when checking the correctness of the answer. Note: This function does not work properly with Chinese script.</string>
    <string name="whatsNew">What\'s new</string>
    <string name="otherCorrectAnswers">Other correct answers:</string>
    <string name="cannotLoadLangList">We could not load the list of languages</string>
    <string name="cannotLoadTTS">We were unable to load Text-to-Speech. Check if you have this app installed on your device.</string>
    <string name="back">Back</string>
    <string name="notificationsDescription">The main function of the app is to send notifications containing questions from sets of questions and answers that the user will prepare or download. The user answers the question directly in the notification and this answer is immediately checked by the application.\n\nThere is an extensive option of configuring the sending of notifications - you can choose the frequency with which they are to be sent, from what sets questions are to be shown, as well as specific days can be selected and specific times when notifications are to come.</string>
    <string name="sendTestNotifi">Send test notification</string>
    <string name="info">Information</string>
    <string name="reminders">Reminders</string>
    <string name="test_reminders">Test reminders</string>
    <string name="change_time_reminders">Change the time when the reminder is sent</string>
    <string name="manage_reminders">Manage reminders</string>
    <string name="notifications_with_questions">Notifications with questions</string>
    <string name="select_days">Select days:</string>
    <string name="manage_notifications">Manage notifications</string>
    <string name="frequency_can_be_changed">The frequency of sending notifications can be changed in the application settings</string>
</resources>