<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/notifications"
        app:iconSpaceReserved="false"
        app:key="notificationsGroup">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="notificationsEnabled"
            app:title="@string/notifications_with_questions"/>
        <Preference
            app:iconSpaceReserved="false"
            app:key="timeAsk"
            app:title="@string/FreqAskPref"/>
        <Preference
            app:iconSpaceReserved="false"
            app:key="manageNotifications"
            app:title="@string/manage_notifications"/>
        <Preference
            app:key="noSetsInDatabaseInfo"
            app:summary="@string/noSetsInfoSettings"
            app:isPreferenceVisible="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/reminders"
        app:iconSpaceReserved="false"
        app:key="remindersGroup">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="remindersEnabled"
            app:title="@string/test_reminders" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="remindersTime"
            app:title="@string/change_time_reminders" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="manageReminders"
            app:title="@string/manage_reminders" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/Theme"
        app:iconSpaceReserved="false">
        <ListPreference
            app:iconSpaceReserved="false"
            app:key="theme"
            app:title="@string/changeTheme"
            app:dialogTitle="@string/Theme"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/backup"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            app:key="create_backup"
            app:title="@string/createBackup"/>
        <Preference
            app:iconSpaceReserved="false"
            app:key="restore_backup"
            app:title="@string/restoreBackup"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="batteryOptimizationCategory"
        app:title="@string/batteryOptimization">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="batteryOptimization"
            app:title="@string/batteryO"
            app:summary="@string/batteryOsummary"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/info">
        <Preference
            app:iconSpaceReserved="false"
            app:key="about"
            app:title="@string/About"/>
        <Preference
            app:iconSpaceReserved="false"
            app:key="whatsNew"
            app:title="@string/whatsNew"/>
    </PreferenceCategory>
</PreferenceScreen>