<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/deleteButton"
            android:icon="@drawable/ic_delete_forever_white"
            android:title="@string/DeleteSet"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/saveButton"
            android:icon="@drawable/ic_save_white"
            android:title="@string/Save"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/ignoreCharsItem"
            android:icon="@drawable/ic_text_fields"
            android:title="@string/IngoreChars"
            app:showAsAction="never"
            android:checkable="true"/>

        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_text_fields"
            android:title="@string/share"
            app:showAsAction="never"
            android:checkable="false"/>
    </group>

</menu>