<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.EditNotificationsForSetActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonsRelative"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@drawable/layout_buttonshape"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/relativeSwitchNotifications">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@id/notificationsSwitch"
                    android:text="@string/notifications_with_questions" />

                <Switch
                    android:id="@+id/notificationsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_days"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/mondayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    app:chipIcon="@drawable/check"/>
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/tuesdayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    app:chipIcon="@drawable/check"/>
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/wednesdayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    app:chipIcon="@drawable/check"/>
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/thursdayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    app:chipIcon="@drawable/check"/>
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/fridayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    app:chipIcon="@drawable/check"/>
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/saturdayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    app:chipIcon="@drawable/check"/>
                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:id="@+id/sundayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />

            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:elevation="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/hours"
                    android:textAlignment="center" />

                <LinearLayout
                    android:id="@+id/hoursLinearNotificationsSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addHoursButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:text="@string/addHours"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:icon="@drawable/add" />

            </LinearLayout>
            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="changeFrequencyClick"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/frequency_can_be_changed"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonsRelative"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <Button
                android:id="@+id/cancelPopupReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                app:icon="@drawable/clear"
                android:layout_gravity="end"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_marginEnd="10dp"
                android:onClick="cancelClick"/>
            <Button
                android:id="@+id/saveReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                app:icon="@drawable/save"
                android:onClick="saveClick"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>