<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/notificationsLogoAndText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/notifications_active_24px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:layout_gravity="center"
            android:textSize="10pt"
            android:layout_marginStart="15dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/notificationsLogoAndText"
        android:layout_above="@id/sendTestNotifiButton">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/notificationsDescription"
            android:textSize="8pt" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendTestNotifiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendTestNotifi"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>