<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/linearFastLearningLogo"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_checktest"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FastLearning"
            android:layout_gravity="center"
            android:textSize="8pt"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayoutFastLearning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relativeButtonsNavigationFL"
        android:layout_below="@id/linearFastLearningLogo"/>

    <RelativeLayout
        android:id="@+id/relativeButtonsNavigationFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextConfigFL"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:onClick="nextClick"
            android:enabled="false"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/back"
            android:onClick="previousClick"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>

</RelativeLayout>
